wacc_test/sample_programs/invalid/semanticErr/array/arrayMixOfTypes.wacc
# arrays can only contain one type

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int[] b = [2, [1, 2], 'b'];
end
